# softrender

./: CMakeLists.txt  README.md
libgraph/: CMakeLists.txt  geometry.cpp  geometry.h  model.cpp  model.h  tgaimage.cpp  tgaimage.h
software-render/: CMakeLists.txt  config  config.h.in  software-render.cpp  software-render.h  utils.cpp  utils.h
